fix gap in main

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,7 +72,7 @@ body {
 /* Configuracion de slider 1 promocion */
 #contenido .slider1{
     width: 100%;
-    height: 600px;
+    height: 400px;
     display: block;
 }
 
@@ -83,7 +83,6 @@ body {
 
 /* Configuracion de slider 2 area de libros*/
 #vista-de-libros {
-  padding: 40px 0px;
   overflow-x: hidden;
  overflow-y: hidden;  
     width: 87%;
@@ -265,7 +264,7 @@ select:active {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-top:270px;
+    padding-top: 20px;
     background-color: white;
     width: 85%;
     gap: 20px;
